--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <div class="cat-buttons" id="cat-buttons"></div>
 
         <div class="cat-desc" id="cat-desc">
-          <em>Responda o teste para ver uma categoria recomendada.</em>
+          <em>Responda o teste para ver uma categoria de roupas recomendada.</em>
         </div>
 
         <!-- Produtos (lista vertical) -->
