--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="carousel" aria-hidden="false">
     <div class="slides" id="slides">
       <div class="slide">
-        <img src="image/carrossel5.jpg" alt="Campanha 1">
+        <img src="image/carrossel5.png" alt="Campanha 1">
       </div>
       <div class="slide">
         <img src="image/carrossel3.webp" alt="Campanha 2">
